@@ -216,6 +216,32 @@ It is always available.
   only.
 \end{funcdesc}
 
+\begin{funcdesc}{getwindowsversion}{}
+  Return a tuple containing five components, describing the Windows 
+  version currently running.  The elements are \var{major}, \var{minor}, 
+  \var{build}, \var{platform}, and \var{text}.  \var{text} contains
+  a string while all other values are integers.
+
+  \var{platform} may be one of the following values:
+  \begin{list}{}{\leftmargin 0.7in \labelwidth 0.65in}
+    \item[0 (\constant{VER_PLATFORM_WIN32s})]
+      Win32s on Windows 3.1.
+    \item[1 (\constant{VER_PLATFORM_WIN32_WINDOWS})] 
+      Windows 95/98/ME
+    \item[2 (\constant{VER_PLATFORM_WIN32_NT})] 
+      Windows NT/2000/XP
+    \item[3 (\constant{VER_PLATFORM_WIN32_CE})] 
+      Windows CE.
+  \end{list}
+  
+  This function wraps the Win32 \function{GetVersionEx()} function;
+  see the Microsoft Documentation for more information about these
+  fields.
+
+  Availability: Windows.
+  \versionadded{2.3}
+\end{funcdesc}
+
 \begin{datadesc}{hexversion}
   The version number encoded as a single integer.  This is guaranteed
   to increase with each version, including proper support for
